Adding new branch

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -102,7 +102,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.prefix = { "${meta.id}.genome_size.csv" }
+        ext.prefix = { "genome_size.csv" }
     }
 
     withName: 'RL_HIFIGENOMEASSEMBLY:ASSEMBLE:ASSEMBLY_QC:COV_TABLE' {
@@ -112,7 +112,7 @@ process {
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
-        ext.prefix = { "${meta.id}.contig_lengths.csv" }
+        ext.prefix = { "contig_lengths.csv" }
     }
 
     withName: 'RL_HIFIGENOMEASSEMBLY:ASSEMBLE:ASSEMBLY_QC:COV_TABLE_PLOT' {
@@ -168,7 +168,6 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
         ext.prefix = { "${meta.id}" }
-        //container = 'dfam/tetools:1.88.5'
     }
 
 }
