--- a/nextflow.config
+++ b/nextflow.config
@@ -30,7 +30,7 @@ params {
     chr_names                  = "$projectDir/data/chromosome.name.list.human.txt"  // single column of chromosome names to use for both the reference and the assembly genomes
 
     // REPEAT_MASK options
-    species                    = 'Homo_sapien' // for the mouse genome
+    species                    = 'human' // for the mouse genome
 
     // MultiQC options
     multiqc_config             = null
